# ekiga

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Coding_Policy  Doxyfile.in  FAQ  FEATURES  HACKING  LICENCE  LICENSE  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  TODO  TODO-GSettings.txt  TODO-UI  TODO_GSettings.txt  acconfig.h  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  ekiga.appdata.xml.in  ekiga.convert.in  ekiga.desktop.in.in  ekiga.doap  ekiga.rc  ekiga.schemas.in.in  gnomemeeting-config-tool.in  gnomemeeting.desktop  gnomemeeting.desktop.in  gnomemeeting.desktop.in.in  (+12 more)
help/: .cvsignore  ChangeLog  Makefile.am
help/C/: Makefile.am  ekiga.xml  gnomemeeting-C.omf  gnomemeeting.xml  xmldocs.make
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fi/: fi.po
help/fr/: .cvsignore  Makefile.am  fr.po  gnomemeeting-fr.omf  gnomemeeting.xml
help/oc/: oc.po
help/pt_BR/: pt_BR.po
help/sl/: sl.po
help/sv/: sv.po
help/uk/: Makefile.am  gnomemeeting-uk.omf  gnomemeeting.xml  uk.po
help/zh_CN/: zh_CN.po
lib/: Makefile.am  dialog.c  dialog.h  e-splash.c  eggtrayicon.c  ekiga-settings.h  gconf_widgets_extensions.c  gconf_widgets_extensions.h  gm_conf-gconf.c  gm_conf-glib.c  gm_conf-widgets_extensions.c  gm_conf-widgets_extensions.h  gm_conf.h  gm_contacts-eds.c  gm_contacts-eds.h  gm_contacts.h  gm_events.c  gm_events.h  gm_events_marshalers.list  gm_marshallers.c  gm_marshallers.h  gm_marshallers.list  gmmarshallers.c  gmmarshallers.h  gmmarshallers.list  gnome_prefs_window.c  gnome_prefs_window.h  gtk-text-buffer-addon.c  gtk-text-buffer-addon.h  gtk-text-buffer-extentions.c  gtk-text-buffer-extentions.h  gtk-text-tag-addon.c  gtk-text-tag-addon.h  gtk-text-view-addon.c  gtk-text-view-addon.h  gtk_menu_extensions.c  gtk_menu_extensions.h  stats_drawing_area.c  stats_drawing_area.h  stock-icons.c  (+4 more)
lib/about/: Makefile.am  gnome-about.c  gnome-about.h
lib/base/: Makefile.am  gm-object.c  gm-object.h  gm-plugin-manager.c  gm-plugin-manager.h  gm-services.c  gm-services.h
lib/contacts/: Makefile.am  gm_contacts-avahi.cpp  gm_contacts-avahi.h  gm_contacts-convert.c  gm_contacts-convert.cpp  gm_contacts-convert.h  gm_contacts-dnd.c  gm_contacts-dnd.cpp  gm_contacts-dnd.h  gm_contacts-eds.cpp  gm_contacts-gm_conf.cpp  gm_contacts-ldap.cpp  gm_contacts-ldap.h  gm_contacts-local.h  gm_contacts-remote.cpp  gm_contacts-remote.h  gm_contacts-zeroconf.cpp  gm_contacts-zeroconf.h  gm_contacts.cpp  gm_contacts.h
lib/druid/: Makefile.am  gnome-druid-page-standard.c  gnome-druid-page.c  gnome-druid-page.h  gnome-druid.c  gnome-druid.h
lib/engine/: Makefile.am  engine.cpp  engine.h
lib/gmconf/: Makefile.am  gmconf-ekiga-keys.h  gmconf-gconf.c  gmconf-glib.c  gmconf-gsettings.c  gmconf-upgrade.c  gmconf-upgrade.h  gmconf.h
lib/gmcontacts/: Makefile.am  e-vcard.c  gmcontacts-avahi.cpp  gmcontacts-avahi.h  gmcontacts-convert.cpp  gmcontacts-convert.h  gmcontacts-dnd.cpp  gmcontacts-dnd.h  gmcontacts-eds.cpp  gmcontacts-gmconf.cpp  gmcontacts-ldap.cpp  gmcontacts-ldap.h  gmcontacts-local.h  gmcontacts-remote.cpp  gmcontacts-remote.h  gmcontacts-zeroconf.cpp  gmcontacts-zeroconf.h  gmcontacts.cpp  gmcontacts.h
lib/gmref/: Makefile.am  gmref.cpp  gmref.h
lib/gui/: Makefile.am  codecsbox.cpp  codecsbox.h  dialpad.c  dialpad.h  dxwindow.cpp  dxwindow.h  esplash.c  gm-cell-renderer-bitext.c  gm-cell-renderer-bitext.h  gm-cell-renderer-expander.c  gm-cell-renderer-expander.h  gm-entry.c  gm-entry.h  gm-info-bar.c  gm-info-bar.h  gm-sidebar.c  gm-sidebar.h  gm-smiley-chooser-button.c  gm-smiley-chooser-button.h  gm-smileys.c  gm-smileys.h  gm-text-anchored-tag.c  gm-text-anchored-tag.h  gm-text-buffer-enhancer-helper-iface.c  gm-text-buffer-enhancer-helper-interface.c  gm-text-buffer-enhancer-helper-interface.h  gm-text-buffer-enhancer.c  gm-text-buffer-enhancer.h  gm-text-extlink.c  gm-text-extlink.h  gm-text-smiley.c  gm-text-smiley.h  gmcallbacks.c  gmcallbacks.h  gmcellrendererexpander.c  gmcellrendererexpander.h  gmcodecsbox.cpp  gmcodecsbox.h  gmconfwidgets.c  (+38 more)
lib/pixops/: composite_line_22_4a4_mmx.S  composite_line_color_22_4a4_mmx.S  convert  have_mmx.S  pixops-internal.h  pixops.c  pixops.h  scale_line_22_33_mmx.S  timescale.c
lib/platform/: Makefile.am  platform-win32.c  platform.c  platform.h  winpaths.h
lib/settings/: ekiga-settings.h  settings-mappings.c  settings-mappings.h
lib/toolbox/: Makefile.am  toolbox-common.c  toolbox-gnome.c  toolbox-gtk.c  toolbox-win32.c  toolbox.h
lib/widgets/: Makefile.am  connectbutton.c  connectbutton.h  esplash.c  esplash.h  gmconfwidgets.c  gmlevelmeter.c  (+17 more)
pixmaps/: HOWTO  Makefile  Makefile.am  Makefile.in  brightness.xpm  color.xpm  computer.xpm  connect.xpm  connect_16.xpm  contrast.xpm  conv-icon.pl  disconnect.xpm  disconnect_16.xpm  down.xpm  eye.xpm  globe-12.xpm  globe-22.xpm  globe-24.xpm  globe-36.xpm  globe2-12.xpm  globe2-22.xpm  globe2-24.xpm  globe2-36.xpm  gm_both_incrusted_frame.xpm  gnome-chat.xpm  icon.h  ils.xpm  inline_emoticons.h  inlines.h  ldap_add.xpm  ldap_refresh.xpm  left_arrow.xpm  mic.xpm  quickcam.xpm  right_arrow.xpm  sample.xpm  settings.xpm  shadow.xpm  small-close.xpm  sound.xpm  (+7 more)
plugins/: Makefile.am  gm-plugin.h
sounds/: .cvsignore  GnomeMeeting.soundlist  GnomeMeeting.soundlist.in  Makefile  Makefile.am  Makefile.in  gnomemeeting.soundlist.in
src/: Makefile  Makefile.am  Makefile.in  accounts.cpp  accounts.h  addressbook_window.cpp  addressbook_window.h  applet.cpp  applet.h  audio.cpp  audio.h  avahi_publisher.cpp  avahi_publisher.h  bonobo_component.cpp  bonobo_component.h  callbacks.cpp  callbacks.h  calls_history_window.cpp  calls_history_window.h  chat_window.cpp  chat_window.h  cleaner.cpp  cleaner.h  codec_info.cpp  codec_info.h  common.cpp  common.h  config-tool-i18n.h  config.cpp  config.h  connection.cpp  connection.h  dbus-helper-stub.xml  dbus-helper.cpp  dbus_component.cpp  dbus_component.h  dbus_component_stub.xml  docklet.cpp  docklet.h  druid.cpp  (+75 more)
(+1381 files in other folders)
